--- a/DesignPattern/pom.xml
+++ b/DesignPattern/pom.xml
@@ -52,6 +52,16 @@
             <artifactId>gson</artifactId>
             <version>2.8.8</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.1.2</version> <!-- Replace with the latest version -->
+        </dependency>
     </dependencies>
 
 </project>
